--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -66,6 +66,11 @@
 			<artifactId>drools-mvel</artifactId>
 			<version>8.42.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
