--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>8.4.1.jre11</version> 
+		</dependency>
 	</dependencies>
 
 	<build>
